Add admin and home page templates

--- a/src/pages/login.ejs
+++ b/src/pages/login.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
 <body class="h-full">
-<!-- <div class="container">
+<div class="container">
     <h2>Login Page</h2>
     <form id="login-form" action="/auth/login" method="POST">
         <div>
@@ -23,7 +23,7 @@
             <input type="submit" value="Login">
         </div>
     </form>
-</div> -->
+</div>
 <p class="text-red-500">Welcome to </p>
 </body>
 </html>
