Refactor home.ejs to fix comment syntax

--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -20,7 +20,7 @@
     <section>
         <h2>List of URLs</h2>
         <div id="urls--container" class="urls--container">
-            <!-- <% for (let url of urls){%>
+            <% for (let url of urls){%>
                 <div class="urls__item">
                     <h4 style="margin-bottom: 0;">
                        <%= url.short_url %>
@@ -28,8 +28,8 @@
                     <p style="margin-top: 5px;">
                         <%= url.url %>
                     </p>
-                </div>`
-             <% }%> -->
+                </div>
+             <% }%>
         </div>
     </section>
 </body>
