--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -9,12 +9,16 @@
     <h1>URLs Page</h1>
     <section>
         <h2>Create a Short URL</h2>
-        <form id="new-url-form" action="">
+        <form id="new-url-form" action="/api/urls" method="POST">
+            <div>
+                <label for="url">Name:</label>
+                <input type="text" name="url" id="url" required>
+            </div>
             <div>
                 <label for="url">Url:</label>
-                <input type="text" name="url" id="url" required>
-                <input type="submit" value="Create">
+                <input type="text" name="name" id="name" required>
             </div>
+            <input type="submit" value="Create">
         </form>
     </section>
     <section>
