Configure Tailwind css

--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-full bg-white" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>URLs Page</title>
+    <link href="/stylesheets/main.css" rel="stylesheet">
 </head>
-<body>
+<body class="h-full">
     <h1>URLs Page</h1>
     <section>
         <h2>Create a Short URL</h2>
+        <p class="text-red-500">Welcome to </p>
         <form id="new-url-form" action="/api/urls" method="POST">
             <div>
                 <label for="url">Name:</label>
