--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -5,12 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>URLs Page</title>
     <link href="/stylesheets/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body class="h-full">
-    <h1>URLs Page</h1>
+
+    <div class="flex min-h-full flex-col justify-start px-6 py-12 lg:px-8 gap-4">
+        <h2 class="text-base font-semibold leading-7 text-gray-900">My Short URLs</h2>
+        <div class="grid xl::grid-cols-6 lg:grid-cols-4 sm:grid-cols-1 gap-4">
+            <% for (let url of urls){%>
+                <div class="flex flex-col gap-3 bg-white shadow-md shadow-indigo-600/15 rounded-lg p-4">
+                    <div class="flex flex-col gap-0.5">
+                        <div class="flex justify-center w-20 bg-gray-500 rounded-md px-1 py-0.5 mb-2">
+                            <span class="text-white font-semibold text-xs">
+                                <%= url.type %>
+                            </span>
+                        </div>
+                        <p class="break-all text-gray-500">
+                            <%= url.url %>
+                        </p>
+                        <a href="<%= url.short_url %>" class="break-all text-indigo-600 font-semibold" target="_blank" title="Open in new tab">
+                            <%= url.short_url %>
+                        </a>
+                    </div>
+
+                    <div class="flex justify-between">
+                        <div class="flex gap-3">
+                            <span class="material-icons text-gray-300">
+                                visibility
+                            </span>
+                            <span class="text-gray-500">
+                                <%= url.visits %>
+                            </span>
+                        </div>
+                        <div class="flex justify-end gap-2">
+                            <button class="material-icons text-gray-300 hover:text-indigo-600 cursor-pointer">
+                                edit
+                            </button>
+                            <span class="material-icons text-gray-300 hover:text-indigo-600 cursor-pointer">
+                                content_copy
+                            </span>
+                            <span class="material-icons text-gray-300 hover:text-red-600 cursor-pointer">
+                                delete
+                            </span> 
+                        </div>
+                    </div>
+                </div>
+             <% }%>
+        </div>
+    </div>
+
+    </div>
+  
+    <!-- <h1>URLs Page</h1>
     <section>
         <h2>Create a Short URL</h2>
-        <p class="text-red-500">Welcome to </p>
         <form id="new-url-form" action="/api/urls" method="POST">
             <div>
                 <label for="url">Name:</label>
@@ -24,21 +73,12 @@
             
             <input type="submit" value="Create">
         </form>
-    </section>
-    <section>
+    </section> -->
+    <!-- <section>
         <h2>List of URLs</h2>
         <div id="urls--container" class="urls--container">
-            <% for (let url of urls){%>
-                <div class="urls__item">
-                    <h4 style="margin-bottom: 0;">
-                       <%= url.short_url %>
-                    </h4>
-                    <p style="margin-top: 5px;">
-                        <%= url.url %>
-                    </p>
-                </div>
-             <% }%>
+          
         </div>
-    </section>
+    </section> -->
 </body>
 </html>
