--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -9,12 +9,27 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body class="h-full">
+    <div class="flex flex-col justify-start px-6 py-12 lg:px-8 gap-4">
+        <h2 class="text-base font-semibold leading-7 text-gray-900">Create a Short URL</h2>
+        <form id="new-url-form" action="/api/urls" method="POST" class="flex flex-col gap-2">
+            <div class="flex gap-2 flex-col sm:flex-row">
+                <input type="text" name="url" id="url" required placeholder="Your long url" class="w-100 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
+                <input type="text" name="name" id="name" required placeholder="Alias name" class="w-100 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
+                <button type="submit" class="px-4 py-2 bg-indigo-600 text-white font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:bg-indigo-700">
+                    Create
+                </button>
+                <button id="customize_btn" class="px-4 py-2 border border-indigo-600 text-indigo-600 font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:text-white hover:border-0 hover:bg-indigo-700">
+                    Customize
+                </button>
+            </div>
+        </form>   
+    </div>
 
-    <div class="flex min-h-full flex-col justify-start px-6 py-12 lg:px-8 gap-4">
+    <div class="flex flex-col justify-start px-6 py-12 lg:px-8 gap-4">
         <h2 class="text-base font-semibold leading-7 text-gray-900">My Short URLs</h2>
-        <div class="grid xl::grid-cols-6 lg:grid-cols-4 sm:grid-cols-1 gap-4">
+        <div class="grid xl:grid-cols-6 lg:grid-cols-4 sm:grid-cols-1 gap-4">
             <% for (let url of urls){%>
-                <div class="flex flex-col gap-3 bg-white shadow-md shadow-indigo-600/15 rounded-lg p-4">
+                <div class="flex flex-col gap-3 bg-white shadow-md shadow-indigo-200 hover:shadow-indigo-300 rounded-lg p-4">
                     <div class="flex flex-col gap-0.5">
                         <div class="flex justify-center w-20 bg-gray-500 rounded-md px-1 py-0.5 mb-2">
                             <span class="text-white font-semibold text-xs">
@@ -22,9 +37,9 @@
                             </span>
                         </div>
                         <p class="break-all text-gray-500">
-                            <%= url.url %>
+                            <%= url.name %>
                         </p>
-                        <a href="<%= url.short_url %>" class="break-all text-indigo-600 font-semibold" target="_blank" title="Open in new tab">
+                        <a href="<%= url.short_url %>" class="break-all text-indigo-600 font-semibold mb-2" target="_blank" title="Open in new tab">
                             <%= url.short_url %>
                         </a>
                     </div>
@@ -54,31 +69,5 @@
              <% }%>
         </div>
     </div>
-
-    </div>
-  
-    <!-- <h1>URLs Page</h1>
-    <section>
-        <h2>Create a Short URL</h2>
-        <form id="new-url-form" action="/api/urls" method="POST">
-            <div>
-                <label for="url">Name:</label>
-                <input type="text" name="url" id="url" required>
-            </div>
-
-            <div>
-                <label for="url">Url:</label>
-                <input type="text" name="name" id="name" required>
-            </div>
-            
-            <input type="submit" value="Create">
-        </form>
-    </section> -->
-    <!-- <section>
-        <h2>List of URLs</h2>
-        <div id="urls--container" class="urls--container">
-          
-        </div>
-    </section> -->
 </body>
 </html>
