--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -726,6 +726,9 @@ select {
 .grid {
   display: grid;
 }
+.hidden {
+  display: none;
+}
 .h-full {
   height: 100%;
 }
@@ -747,6 +750,9 @@ select {
 .w-10 {
   width: 2.5rem;
 }
+.w-auto {
+  width: auto;
+}
 .border-spacing-1 {
   --tw-border-spacing-x: 0.25rem;
   --tw-border-spacing-y: 0.25rem;
@@ -754,6 +760,9 @@ select {
 }
 .cursor-pointer {
   cursor: pointer;
+}
+.flex-row {
+  flex-direction: row;
 }
 .flex-col {
   flex-direction: column;
@@ -1049,6 +1058,9 @@ select {
 }
 .hover\:border-0:hover {
   border-width: 0px;
+}
+.hover\:border:hover {
+  border-width: 1px;
 }
 .hover\:border-indigo-700:hover {
   --tw-border-opacity: 1;
