--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -13,12 +13,12 @@
         <h2 class="text-base font-semibold leading-7 text-gray-900">Create a Short URL</h2>
         <form id="new-url-form" action="/api/urls" method="POST" class="flex flex-col gap-2">
             <div class="flex gap-2 flex-col sm:flex-row">
-                <input type="text" name="url" id="url" required placeholder="Your long url" class="w-100 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-                <input type="text" name="name" id="name" required placeholder="Alias name" class="w-100 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
+                <input type="url" name="url" id="url" required placeholder="Your long URL" class="w-100 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
+                <input type="text" name="name" id="alias" required placeholder="Alias name" class="w-100 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
                 <button type="submit" class="px-4 py-2 bg-indigo-600 text-white font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:bg-indigo-700">
                     Create
                 </button>
-                <button id="customize_btn" class="px-4 py-2 border border-indigo-600 text-indigo-600 font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:text-white hover:border-0 hover:bg-indigo-700">
+                <button type="button" onclick="customizeUrl()" class="px-4 py-2 border border-indigo-600 text-indigo-600 font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:text-white hover:border-0 hover:bg-indigo-700">
                     Customize
                 </button>
             </div>
@@ -28,8 +28,7 @@
     <div class="flex flex-col justify-start px-6 py-12 lg:px-8 gap-4">
         <h2 class="text-base font-semibold leading-7 text-gray-900">My Short URLs</h2>
         <div id="urls_list" class="grid xl:grid-cols-6 lg:grid-cols-4 sm:grid-cols-1 gap-4">
-            <% for (let i = 0; i < urls.length; i++) {%>
-                <% const url = urls[i] %>
+            <% for (const url of urls) {%>
                 <div class="flex flex-col gap-3 bg-white shadow-md shadow-indigo-200 hover:shadow-indigo-300 hover:shadow-lg rounded-lg p-4">
                     <div class="flex flex-col gap-0.5">
                         <div class="flex justify-center w-20 bg-gray-500 rounded-md px-1 py-0.5 mb-2">
@@ -40,7 +39,7 @@
                         <p class="break-all text-gray-500">
                             <%= url.name %>
                         </p>
-                        <a id="short_url_<%= i %>" href="<%= url.short_url %>" class="break-all text-indigo-600 font-semibold mb-2" target="_blank" title="Open in new tab">
+                        <a href="<%= url.short_url %>" class="break-all text-indigo-600 font-semibold mb-2" target="_blank" title="Open in new tab">
                             <%= url.short_url %>
                         </a>
                     </div>
@@ -55,13 +54,13 @@
                             </span>
                         </div>
                         <div class="flex justify-end gap-2">
-                            <button id="edit_btn_<%= i %>" class="material-icons text-gray-300 hover:text-indigo-600 cursor-pointer">
+                            <button class="material-icons text-gray-300 hover:text-indigo-600 cursor-pointer">
                                 edit
                             </button>
-                            <button id="copy_btn_<%= i %>" onclick="copyUrl('<%= url.short_url %>')" class="material-icons text-gray-300 hover:text-indigo-600 cursor-pointer">
+                            <button onclick="copyUrl('<%= url.short_url %>')" class="material-icons text-gray-300 hover:text-indigo-600 cursor-pointer">
                                 content_copy
                             </button>
-                            <button id="delete_btn_<%= i %>" onclick="deleteUrl('<%= url.id %>')" class="material-icons text-gray-300 hover:text-red-600 cursor-pointer">
+                            <button onclick="deleteUrl('<%= url.id %>')" class="material-icons text-gray-300 hover:text-red-600 cursor-pointer">
                                 delete
                             </button> 
                         </div>
@@ -71,9 +70,15 @@
         </div>
     </div>
     <script >
-        document.getElementById("customize_btn").addEventListener("click", () => { 
-            window.location = "/url/customize"; 
-        });
+        async function customizeUrl() {
+            const url = document.getElementById('url').value;
+            const alias = document.getElementById('alias').value;
+
+            window.sessionStorage.setItem('url', url);
+            window.sessionStorage.setItem('alias', alias);
+
+            window.location = '/url/customize';
+        }
 
         async function copyUrl(shortUrl) {
             try {
