--- a/src/pages/url.ejs
+++ b/src/pages/url.ejs
@@ -7,9 +7,9 @@
     <link href="/stylesheets/main.css" rel="stylesheet">
 </head>
 <body class="h-full">
-    <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+    <div class="flex min-h-full flex-col justify-start px-6 py-12 lg:px-8">
         <h2 class="text-base text-center font-semibold leading-7 text-gray-900">Create a Custom Short URL</h2>
-        <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+        <div class="mt-10 lg:mx-auto lg:w-full lg:max-w-sm">
             <form id="new-url-form" action="/api/urls" method="POST" class="space-y-6">
                 <div>
                     <label for="url" class="block text-sm font-medium leading-6 text-gray-900">Your long URL:</label>
@@ -25,7 +25,7 @@
                 </div>
                 <div>
                     <label for="type" class="block text-sm font-medium leading-6 text-gray-900">Type:</label>
-                    <select name="type" id="urlType" onchange="selectType()" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    <select name="type" id="urlType" onchange="selectType()" class="mt-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                         <option value="P" selected>Permanent</option>
                         <option value="T">Temporary</option>
                         <option value="OT">One-time</option>
@@ -33,7 +33,7 @@
                 </div>
                 <div id="expirationDate__container" class="hidden">
                     <label for="expirationDate" class="block text-sm font-medium leading-6 text-gray-900">Expiration date:</label>
-                    <input id="expirationDate" name="expirationDate" type="date" min="<%= new Date().toISOString().split("T")[0]   %>" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" disabled>
+                    <input id="expirationDate" name="expirationDate" type="date" min="<%= new Date().toISOString().split("T")[0]   %>" class="mt-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" disabled>
                 </div>
                 <div class="flex flex-col sm:flex-row justify-between gap-2">
                     <button type="submit" class="w-full px-4 py-2 bg-indigo-600 text-white font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:bg-indigo-700">
