--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -9,66 +9,75 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body class="h-full">
-    <div class="flex flex-col justify-start px-6 py-12 lg:px-8 gap-4">
-        <h2 class="text-base font-semibold leading-7 text-gray-900">Create a Short URL</h2>
-        <form id="new-url-form" action="/api/urls" method="POST" class="flex flex-col gap-2">
-            <div class="flex gap-2 flex-col sm:flex-row">
-                <input type="url" name="url" id="url" required placeholder="Your long URL" class="w-100 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-                <input type="text" name="name" id="alias" required placeholder="Alias name" class="w-100 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
-                <button type="submit" class="px-4 py-2 bg-indigo-600 text-white font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:bg-indigo-700">
-                    Create
-                </button>
-                <button type="button" onclick="customizeUrl()" class="px-4 py-2 border border-indigo-600 text-indigo-600 font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:text-white hover:border-0 hover:bg-indigo-700">
-                    Customize
-                </button>
-            </div>
-        </form>   
-    </div>
-
-    <div class="flex flex-col justify-start px-6 py-12 lg:px-8 gap-4">
-        <h2 class="text-base font-semibold leading-7 text-gray-900">My Short URLs</h2>
-        <div id="urls_list" class="grid xl:grid-cols-6 lg:grid-cols-4 sm:grid-cols-1 gap-4">
-            <% for (const url of urls) {%>
-                <div class="flex flex-col gap-3 bg-white shadow-md shadow-indigo-200 hover:shadow-indigo-300 hover:shadow-lg rounded-lg p-4">
-                    <div class="flex flex-col gap-0.5">
-                        <div class="flex justify-center w-20 bg-gray-500 rounded-md px-1 py-0.5 mb-2">
-                            <span class="text-white font-semibold text-xs">
-                                <%= url.typeParsed.toLowerCase() %>
-                            </span>
-                        </div>
-                        <p class="break-all text-gray-500">
-                            <%= url.name %>
-                        </p>
-                        <a href="<%= url.shortUrl %>" class="break-all text-indigo-600 font-semibold mb-2" target="_blank" title="Open in new tab">
-                            <%= url.shortUrl %>
-                        </a>
+    <div class="flex min-h-full flex-col justify-start px-6 py-12 lg:px-8">
+        <div class="flex flex-col justify-center gap-4">
+            <h2 class="text-base text-center font-semibold leading-7 text-gray-900">Create a Short URL</h2>
+            <form id="new-url-form" action="/api/urls" method="POST" class="mt-4 w-full">
+                <div class="flex gap-2 flex-col justify-center lg:flex-row">
+                    <input type="url" name="url" id="url" required placeholder="Your long URL" class="w-full lg:w-80 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
+                    <input type="text" name="name" id="alias" required placeholder="Alias name" class="w-full lg:w-56 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
+                    <div class="flex flex-col sm:flex-row gap-2">
+                        <button type="submit" class="w-full lg:w-24 px-4 py-2 bg-indigo-600 text-white font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:bg-indigo-700">
+                            Create
+                        </button>
+                        <button type="button" onclick="customizeUrl()" class="w-full lg:w-28 px-4 py-2 border border-indigo-600 text-indigo-600 font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:text-white hover:border-0 hover:bg-indigo-700">
+                            Customize
+                        </button>
                     </div>
-
-                    <div class="flex justify-between">
-                        <div class="flex gap-3">
-                            <span class="material-icons text-gray-300">
-                                visibility
-                            </span>
-                            <span class="text-gray-500">
-                                <%= url.visits %>
-                            </span>
-                        </div>
-                        <div class="flex justify-end gap-2">
-                            <button class="material-icons text-gray-300 hover:text-indigo-600 cursor-pointer">
-                                edit
-                            </button>
-                            <button onclick="copyUrl('<%= url.shortUrl %>')" class="material-icons text-gray-300 hover:text-indigo-600 cursor-pointer">
-                                content_copy
-                            </button>
-                            <button onclick="deleteUrl('<%= url.id %>')" class="material-icons text-gray-300 hover:text-red-600 cursor-pointer">
-                                delete
-                            </button> 
-                        </div>
-                    </div>
+                    
                 </div>
-             <% }%>
+            </form>
+        </div>
+        
+
+        <div class="mt-20 flex flex-col justify-start gap-4">
+            <h2 class="text-base text-center font-semibold leading-7 text-gray-900">My Short URLs</h2>
+            <div id="urls_list" class="mt-4 grid xl:grid-cols-6 lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-4">
+                <% for (const url of urls) {%>
+                    <div class="flex flex-col gap-3 bg-white shadow-md shadow-indigo-200 hover:shadow-indigo-300 hover:shadow-lg rounded-lg p-4">
+                        <div class="flex flex-col gap-0.5">
+                            <div class="flex justify-center w-20 bg-gray-500 rounded-md px-1 py-0.5 mb-2">
+                                <span class="text-white font-semibold text-xs">
+                                    <%= url.typeParsed.toLowerCase() %>
+                                </span>
+                            </div>
+                            <p class="break-all text-gray-500">
+                                <%= url.name %>
+                            </p>
+                            <a href="<%= url.shortUrl %>" class="break-all text-indigo-600 font-semibold mb-2" target="_blank" title="Open in new tab">
+                                <%= url.shortUrl %>
+                            </a>
+                        </div>
+    
+                        <div class="flex justify-between">
+                            <div class="flex gap-3">
+                                <span class="material-icons text-gray-300">
+                                    visibility
+                                </span>
+                                <span class="text-gray-500">
+                                    <%= url.visits %>
+                                </span>
+                            </div>
+                            <div class="flex justify-end gap-2">
+                                <button class="material-icons text-gray-300 hover:text-indigo-600 cursor-pointer">
+                                    edit
+                                </button>
+                                <button onclick="copyUrl('<%= url.shortUrl %>')" class="material-icons text-gray-300 hover:text-indigo-600 cursor-pointer">
+                                    content_copy
+                                </button>
+                                <button onclick="deleteUrl('<%= url.id %>')" class="material-icons text-gray-300 hover:text-red-600 cursor-pointer">
+                                    delete
+                                </button> 
+                            </div>
+                        </div>
+                    </div>
+                 <% }%>
+            </div>
         </div>
     </div>
+    
+
+   
     <script >
         async function customizeUrl() {
             const url = document.getElementById('url').value;
