--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -830,6 +830,9 @@ select {
 .gap-5 {
   gap: 1.25rem;
 }
+.gap-6 {
+  gap: 1.5rem;
+}
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1230,6 +1233,10 @@ select {
 
   .sm\:flex-col {
     flex-direction: column;
+  }
+
+  .sm\:gap-6 {
+    gap: 1.5rem;
   }
 
   .sm\:text-sm {
