--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -20,7 +20,7 @@
                         <button type="submit" class="w-full lg:w-24 px-4 py-2 bg-indigo-600 text-white font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:bg-indigo-700">
                             Create
                         </button>
-                        <button type="button" onclick="customizeUrl()" class="w-full lg:w-28 px-4 py-2 border border-indigo-600 text-indigo-600 font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:text-white hover:border-0 hover:bg-indigo-700">
+                        <button type="button" onclick="customizeUrl()" class="w-full lg:w-28 px-4 py-2 border border-indigo-600 text-indigo-600 font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:text-white hover:border hover:border-indigo-700 hover:bg-indigo-700">
                             Customize
                         </button>
                     </div>
