--- a/src/pages/url.ejs
+++ b/src/pages/url.ejs
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div>
-                    <label for="url" class="block text-sm font-medium leading-6 text-gray-900">Alias name:</label>
+                    <label for="alias" class="block text-sm font-medium leading-6 text-gray-900">Alias name:</label>
                     <div class="mt-2 w-full">
                         <input id="alias" name="name" type="text" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                     </div>
@@ -34,6 +34,25 @@
                 <div id="expirationDate__container" class="hidden">
                     <label for="expirationDate" class="block text-sm font-medium leading-6 text-gray-900">Expiration date:</label>
                     <input id="expirationDate" name="expirationDate" type="date" min="<%= new Date().toISOString().split("T")[0]   %>" class="mt-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" disabled>
+                </div>
+                <div class="flex flex-col sm:flex-row sm:gap-6">
+                    <div class="flex items-center gap-1">
+                        <input type="radio" id="codeChoiceCode" name="codeChoice" value="codeChoiceCode" onchange="selectCodeChoice()" checked />
+                        <label for="codeChoiceCode">Customize code</label>
+                    </div>
+              
+                    <div class="flex items-center gap-1">
+                        <input type="radio" id="codeChoiceLength" name="codeChoice" value="codeChoiceLength" onchange="selectCodeChoice()"/>
+                        <label for="codeChoiceLength">Customize random code length</label>
+                    </div>
+                </div>
+                <div id="code__container">
+                    <label for="code" class="block text-sm font-medium leading-6 text-gray-900">Code:</label>
+                    <input id="code" name="code" type="text" minlength="5" maxlength="15" class="mt-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" disabled>
+                </div>
+                <div id="codeLength__container">
+                    <label for="codeLength" class="block text-sm font-medium leading-6 text-gray-900">Code length:</label>
+                    <input id="codeLength" name="codeLength" type="number" min="5" max="15" class="mt-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" disabled>
                 </div>
                 <div class="flex flex-col sm:flex-row justify-between gap-2">
                     <button type="submit" class="w-full px-4 py-2 bg-indigo-600 text-white font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:bg-indigo-700">
@@ -59,6 +78,8 @@
 
         selectType();
 
+        selectCodeChoice();
+
         function selectType() {
             const type = document.getElementById('urlType').value;
             const expirationDate = document.getElementById('expirationDate');
@@ -82,6 +103,27 @@
                     break;
                 default:
                     break;
+            }
+        }
+
+        function selectCodeChoice() {
+            const codeChoiceCode = document.getElementById('codeChoiceCode');
+            const codeChoiceLength = document.getElementById('codeChoiceLength');
+            const code = document.getElementById('code');
+            const codeLength = document.getElementById('codeLength');
+            const codeContainer = document.getElementById('code__container');
+            const codeLengthContainer = document.getElementById('codeLength__container');
+
+            if (codeChoiceCode.checked) {
+                code.disabled = false;
+                codeContainer.classList.remove("hidden");
+                codeLength.disabled = true;
+                codeLengthContainer.classList.add("hidden");
+            } else if (codeChoiceLength.checked) {
+                code.disabled = true;
+                codeContainer.classList.add("hidden");
+                codeLength.disabled = false;
+                codeLengthContainer.classList.remove("hidden");
             }
         }
 
