--- a/src/pages/url.ejs
+++ b/src/pages/url.ejs
@@ -9,7 +9,7 @@
 <body class="h-full">
     <div class="flex min-h-full flex-col justify-start px-6 py-12 lg:px-8">
         <h2 class="text-base text-center font-semibold leading-7 text-gray-900">Create a Custom Short URL</h2>
-        <div class="mt-10 lg:mx-auto lg:w-full lg:max-w-sm">
+        <div class="mt-10 lg:mx-auto lg:w-full lg:max-w-md xl:max-w-xl">
             <form id="new-url-form" action="/api/urls" method="POST" class="space-y-6">
                 <div>
                     <label for="url" class="block text-sm font-medium leading-6 text-gray-900">Your long URL:</label>
