--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -34,7 +34,7 @@
             <h2 class="text-base text-center font-semibold leading-7 text-gray-900">My Short URLs</h2>
             <div id="urls_list" class="mt-4 grid xl:grid-cols-4 lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-4">
                 <% for (const url of urls) {%>
-                    <div class="flex flex-col gap-3 bg-white shadow-md shadow-indigo-200 hover:shadow-indigo-300 hover:shadow-lg rounded-lg p-4">
+                    <div class="flex flex-col justify-between gap-3 bg-white shadow-md shadow-indigo-200 hover:shadow-indigo-300 hover:shadow-lg rounded-lg p-4">
                         <div class="flex flex-col gap-0.5">
                             <div class="flex justify-center w-20 bg-gray-500 rounded-md px-1 py-0.5 mb-2">
                                 <span class="text-white font-semibold text-xs">
