--- a/src/pages/url-customize.ejs
+++ b/src/pages/url-customize.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create a Short URL</title>
+    <title>Create Short URL</title>
     <link href="/stylesheets/main.css" rel="stylesheet">
 </head>
 <body class="h-full">
