Fix one-time url behaviour

--- a/src/pages/url-edit.ejs
+++ b/src/pages/url-edit.ejs
@@ -117,7 +117,7 @@
             });
 
             if (response.ok) {
-                // window.location = '/';
+                window.location = '/';
             } else {
                 const data = await response.json();
                 alert(data.message);
